@@ -2,6 +2,6 @@
 set prev=%cd%
 cd /D "%~dp0"
 
-java -jar RoboViz.jar %*
+java --add-exports=java.desktop/sun.awt=ALL-UNNAMED -jar RoboViz.jar %*
 
 cd %prev%
